set home view page fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">SnsApp</string>
+
+    <string name="home">홈</string>
+    <string name="photo_feed">사진피드</string>
+
 </resources>
