--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,11 @@
     <string name="home_popular_cards_title">인기카드 : 카드를 클릭해보세요.</string>
     <string name="home_popular_users_title">인기유저 : 유저를 클릭해보세요.</string>
 
+    <string name="card_detail_image_description">카드 설명: %s</string>
+    <string name="card_detail_user_nickname">작성자: %s</string>
+    <string name="card_detail_recomend_cards_title">추천카드 : 카드를 클릭해보세요.</string>
+    <string name="user_nickname">닉네임: %s</string>
+    <string name="user_introduction">소개: %s</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
