--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="card_detail_image_description">카드 설명: %s</string>
     <string name="card_detail_user_nickname">작성자: %s</string>
     <string name="card_detail_recomend_cards_title">추천카드 : 카드를 클릭해보세요.</string>
-    <string name="user_nickname">닉네임: %s</string>
+    <string name="user_detail_user_nickname">닉네임: %s</string>
     <string name="user_introduction">소개: %s</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
