--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="introduction">소개</string>
     <string name="password">비밀번호</string>
     <string name="signup">가입</string>
+    <string name="signin">로그인</string>
+    <string name="signout">로그아웃</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
